option java_package = "com.github.yaoshengzhe.yraft.protobuf.generated";
option java_outer_classname = "RaftProtos";
option java_generic_services = true;
option java_generate_equals_and_hash = true;
option optimize_for = SPEED;


message VoteRequest {
    // candidate's term
    optional uint64 term = 1;
    // candidate requesting vote
    optional uint64 candidate_id = 2;
    // index of candidate's last log entry
    optional uint64 last_log_index = 3;
    // term of candidate's last log entry
    optional uint64 last_log_term = 4;
}

message VoteResponse {
    // currentTerm, for candidate to update itself
    optional uint64 term = 1;
    // GRANTED means candidate received vote
    optional VoteDecision vote_decision = 2;

    enum VoteDecision {
        UNKNOWN = -1;
        GRANTED = 0;
    }
}

message AppendEntriesRequest {
    // leader's term
    optional uint64 term = 1;
    // leader's id so follower can redirect clients
    optional uint64 leader_id = 2;
    // index of log entry immediately preceding new ones
    optional uint64 prev_log_index = 3;
    // term of prevLogIndex entry
    optional uint64 prev_log_term = 4;
    // leaderâ€™s commitIndex
    optional uint64 leader_commit_index = 5;
    // log entries to store (empty for heartbeat; may send more than one for efficiency)
    repeated LogEntry entries = 6;
}

message AppendEntriesResponse {
    // currentTerm, for leader to update itself
    optional uint64 term = 1;
    // SUCCESS if follower contained entry matching prevLogIndex and prevLogTerm
    optional AppendStatus status = 2;

    enum AppendStatus {
        ERROR = -1;
        SUCCESS = 0;
    }
}

message PersistentState {
    optional uint64 current_term = 1;
    optional uint64 vote_for = 2;
    repeated LogEntry entries = 3;
}

message ClusterConfig {
    repeated string hosts = 1;
}

message LogEntry {

    optional EntryType type = 1;
    optional bytes data = 2;

    enum EntryType {
        UNKNOWN = -1;
        NORMAL = 0;
        MEMBERSHIP = 1;
    }
}